--- a/styles1.css
+++ b/styles1.css
@@ -22,7 +22,7 @@ li {
     font-family: monospace;
   }
   .light-theme {
-    --bg: var(--green);
+    --bg: var(--blue);
     --fontColor: var(--black);
   }
   .dark-theme {
@@ -35,8 +35,8 @@ li {
   }
   .btn {
     position: absolute;
-    top: 20px;
-    left: 250px;
+    top: 50px;
+    left: 5000px;
     height: 50px;
     width: 50px;
     border-radius: 50%;
@@ -47,7 +47,7 @@ li {
   .btn:focus { outline-style: none; }
 
   .light-theme {
-  --bg: var(--green);
+  --bg: var(--blue);
   --fontColor: var(--black);
   --btnBg: var(--black);
   --btnFontColor: var(--white);
